Visualizer performance (#2615)
* Moved the isEnabled to super class and cache it to improve performance
* Made grid and plane use a vertex buffer object renderer with shaders to improve performance
* Added actions for toggling visualizer features